lib/scripts/docker-dind.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-dind-test
spec:
  containers:
  - name: docker
    image: docker:latest
    command: ["dockerd"]
    args: ["--host=unix:///var/run/docker.sock"]
    ports:
    - containerPort: 2375
    volumeMounts:
    - name: docker-sock
      mountPath: /var/run/docker.sock
    securityContext:
      privileged: true  # Agrega esto
  - name: docker-client
    image: docker:latest
    command: ["sleep"]
    args: ["infinity"]
    volumeMounts:
    - name: docker-sock
      mountPath: /var/run/docker.sock
    securityContext:
      privileged: true  # Agrega esto
  volumes:
  - name: docker-sock
    emptyDir: {}
