lib/scripts/docker.installl.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: docker
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: docker
  template:
    metadata:
      labels:
        name: docker
    spec:
      containers:
      - name: docker
        image: docker:20.10
        securityContext:
          privileged: true
        volumeMounts:
        - name: docker-socket
          mountPath: /var/run/docker.sock
        - name: varlibdocker
          mountPath: /var/lib/docker
      hostNetwork: true
      hostPID: true
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
      - name: varlibdocker
        hostPath:
          path: /var/lib/docker
