lib/scripts/kaniko-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-pod
spec:
  containers:
    - name: kaniko
      image: gcr.io/kaniko-project/executor:latest
      volumeMounts:
        - name: kaniko-secret
          mountPath: /kaniko/.docker/
          readOnly: true
  restartPolicy: Never
  volumes:
    - name: kaniko-secret
      secret:
        secretName: kaniko-secret
