lib/scripts/nodejs.jenkins.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-node
  namespace: jenkins
spec:
  containers:
  - name: node
    image: node:20-alpine
    command: ['sh', '-c', 'while true; do sleep 30; done;']
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
