lib/scripts/test-docker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-test
spec:
  containers:
  - name: docker
    image: docker:latest
    command:
      - cat
    tty: true
    volumeMounts:
    - name: docker-sock
      mountPath: /var/run/docker.sock
  volumes:
  - name: docker-sock
    hostPath:
      path: /var/run/docker.sock
