lib/scripts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx  # Aquí se especifica el nombre de la IngressClass
  rules:
    - http:
        paths:
          - path: /jenkins(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jenkins
                port:
                  number: 80
          - path: /sonarqube(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
